# snapshot_api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
app/: config.py  main.py  models.py  routers.py
app/exceptions/: snapshot_not_found.py
app/routers/: snapshots.py
app/services/: snapshot_checking_service.py  snapshot_chunking_service.py  snapshot_generation_service.py
app/utils/: exception_handler.py  redis.py
tests/: conftest.py  test_snapshots.py
